@@ -1,7 +1,7 @@
 OUTPUT_FORMAT(elf64-x86-64)
 ENTRY(kmain)
 SECTIONS {
-  . = 0xFFFF800000200000;
+  . = 0xFFFFFFFF80200000;
   .text :
   {
     *(.text)
